--- a/requirements.txt
+++ b/requirements.txt
@@ -1,54 +1,83 @@
-altair==4.0.0
+altair==5.5.0
+asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1733250440834/work
 attrs==25.3.0
-backports.zoneinfo==0.2.1
-blinker==1.8.2
+blinker==1.9.0
 cachetools==5.5.2
 certifi==2025.4.26
 charset-normalizer==3.4.2
 click==8.1.8
-entrypoints==0.4
+comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1733502965406/work
+contourpy==1.3.2
+cycler==0.12.1
+debugpy @ file:///croot/debugpy_1736267418885/work
+decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1740384970518/work
+entrypoints @ file:///home/conda/feedstock_root/build_artifacts/entrypoints_1733327148154/work
+exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1733208806608/work
+executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1745502089858/work
+fonttools==4.57.0
 gitdb==4.0.12
 GitPython==3.1.44
 idna==3.10
-importlib_metadata==8.5.0
-importlib_resources==6.4.5
+importlib_metadata==8.7.0
+ipykernel @ file:///home/conda/feedstock_root/build_artifacts/ipykernel_1719845459717/work
+ipython @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_ipython_1745673194/work
+jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1733300866624/work
 Jinja2==3.1.6
-joblib==1.4.2
+joblib==1.5.0
 jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
+jsonschema-specifications==2025.4.1
+jupyter-client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1654730843242/work
+jupyter_core @ file:///home/conda/feedstock_root/build_artifacts/jupyter_core_1727163409502/work
+kiwisolver==1.4.8
 markdown-it-py==3.0.0
-MarkupSafe==2.1.5
+MarkupSafe==3.0.2
+matplotlib==3.10.1
+matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1733416936468/work
 mdurl==0.1.2
 narwhals==1.38.0
+nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1733325553580/work
 numpy==1.24.4
-packaging==25.0
+packaging @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_packaging_1745345660/work
 pandas==1.5.3
-pillow==10.4.0
-pkgutil_resolve_name==1.3.10
+parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1733271261340/work
+pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1733301927746/work
+pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1733327343728/work
+pillow==11.2.1
+platformdirs @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_platformdirs_1742485085/work
+prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1744724089886/work
 protobuf==3.20.3
-pyarrow==17.0.0
+psutil @ file:///home/conda/feedstock_root/build_artifacts/psutil_1653089181607/work
+ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1733302279685/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl#sha256=92c32ff62b5fd8cf325bec5ab90d7be3d2a8ca8c8a3813ff487a8d2002630d1f
+pure_eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1733569405015/work
+pyarrow==20.0.0
 pydeck==0.9.1
-Pygments==2.19.1
+Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1736243443484/work
 Pympler==1.1
-python-dateutil==2.9.0.post0
+pyparsing==3.2.3
+python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1733215673016/work
 pytz==2025.2
-referencing==0.35.1
+pyzmq @ file:///croot/pyzmq_1734687138743/work
+referencing==0.36.2
 requests==2.32.3
 rich==14.0.0
-rpds-py==0.20.1
+rpds-py==0.24.0
 scikit-learn==1.2.1
-scipy==1.10.1
+scipy==1.15.2
+seaborn==0.13.2
 semver==3.0.4
-six==1.17.0
+six @ file:///home/conda/feedstock_root/build_artifacts/six_1733380938961/work
 smmap==5.0.2
+stack_data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1733569443808/work
 streamlit==1.17.0
-threadpoolctl==3.5.0
+threadpoolctl==3.6.0
 toml==0.10.2
-toolz==1.0.0
-tornado==6.4.2
-typing_extensions==4.13.2
-tzlocal==5.2
-urllib3==2.2.3
-validators==0.34.0
-watchdog==4.0.2
-zipp==3.20.2
+tornado @ file:///home/conda/feedstock_root/build_artifacts/tornado_1648827254365/work
+traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1733367359838/work
+typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_typing_extensions_1744302253/work
+tzlocal==5.3.1
+urllib3==2.4.0
+validators==0.35.0
+watchdog==6.0.0
+wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1733231326287/work
+yellowbrick==1.5
+zipp==3.21.0
